k8s-deploy/istio/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lemo-dev
  labels:
    istio-injection: enabled  # 启用Istio自动注入Envoy Sidecar
    name: lemo-dev
